apps/reactive-resume/reactive-resume-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-resume
  namespace: reactive-resume
  labels:
    app.kubernetes.io/name: reactive-resume
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: reactive-resume
